navigation and header styled

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <![endif]-->
   </head>
   <body>
-
     <!-- NAVBAR --> 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -27,33 +26,47 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" href="#"><img src="images/logo.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right navbar-soc">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right navbar-main">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
+          <div class="navbar-wrp">
+            <ul id="navbar-top" class="nav navbar-nav navbar-right">
+              <li>Sligo +353 (0)71 457 98 44</li>
+              <li>|</li>
+              <li>Dublin +353 (0)1 343 34 87</li>
+            </ul>
+          </div>
+          <div class="navbar-wrp">
+            <ul id="navbar-soc" class="nav navbar-nav navbar-right">
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+            </ul>
+            <ul id="navbar-main" class="nav navbar-nav navbar-right">
+              <li class="active"><a href="#">Web Development<span class="sr-only">(current)</span></a></li>
+              <li><a href="#">Web Design</a></li>
+              <li><a href="#">Graphic Design</a></li>
+              <li><a href="#">Digital Marketing</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
     <!-- NAVBAR END -->
+    <!-- HEADER --> 
+    <div class="header-cont"></div>
+    <!-- HEADER END --> 
 
-    <div>hello world</div>
     <!-- TODO: Here goes your content! -->
 
 
 
-    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
   </body>
 </html>
 
