--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
 
     <!-- TODO: Here goes your content! -->
 
+    <!-- FOOTER --> 
+    
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-12 col-xs-12"></div>
+          <div class="col-md-2 col-sm-6 col-xs-6"></div>
+          <div class="col-md-2 col-sm-6 col-xs-6"></div>
+          <div class="col-md-4 col-sm-12 col-xs-12"></div>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- FOOTER END --> 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
