--- a/pages/gr-des.html
+++ b/pages/gr-des.html
@@ -7,7 +7,7 @@
     <title>Reachpeak</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="navbar-wrp">
@@ -44,13 +44,13 @@
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li class="active"><a href="pages/web-dev.html">Web Development<span class="sr-only">(current)</span></a></li>
-              <li><a href="pages/web-des.html">Web Design</a></li>
-              <li><a href="pages/gr-des.html">Graphic Design</a></li>
-              <li><a href="pages/dig-mar.html">Digital Marketing</a></li>
-              <li><a href="pages/port.html">Portfolio</a></li>
-              <li><a href="pages/about.html">About us</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
+              <li><a href="web-dev.html">Web Development</a></li>
+              <li><a href="web-des.html">Web Design</a></li>
+              <li class="active"><a href="gr-des.html">Graphic Design</a></li>
+              <li><a href="dig-mar.html">Digital Marketing</a></li>
+              <li><a href="port.html">Portfolio</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
