section one home added and styled

--- a/index.html
+++ b/index.html
@@ -56,12 +56,72 @@
         </div>
       </div>
     </nav>
-    <!-- NAVBAR END -->
+    <!-- END OF NAVBAR -->
     <!-- HEADER --> 
     <div class="header-cont"></div>
-    <!-- HEADER END --> 
-
-    <!-- TODO: Here goes your content! -->
+    <!-- END OF HEADER --> 
+    <!-- SECTION ONE --> 
+    <section class="container sec-one">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <h2>Web Development</h2>
+          <p>
+            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/web-dev.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <h2>Web Design</h2>
+          <p>
+            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/web-des.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <h2>Graphic Design</h2>
+          <p>
+            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/gr-des.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <h2>Digital Marketing</h2>
+          <p>
+            Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/dig-mar.html">Learn more</a>
+        </div>
+      </div>
+    </section>
+    <!-- END OF SECTION ONE --> 
+    <!-- SECTION TWO --> 
+    <section class="container sec-two">
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+    </section>
+    <!-- END OF SECTION TWO --> 
+    <!-- SECTION THREE --> 
+    <section class="container sec-three">
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+    </section>
+    <!-- END OF SECTION THREE --> 
+    <!-- SECTION FOUR --> 
+    <section class="container sec-four">
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+    </section>
+    <!-- END OF SECTION FOUR --> 
+    <!-- SECTION FIVE --> 
+    <section class="container sec-five">
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+    </section>
+    <!-- END OF SECTION FIVE --> 
 
     <!-- FOOTER --> 
     <footer>
@@ -121,9 +181,7 @@
         </div>
       </div>
     </footer>
-
-
-    <!-- FOOTER END --> 
+    <!-- END OF FOOTER --> 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
