sections added and styled

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <div class="navbar-wrp">
+          <div class="navbar-wrp hidden-xs">
             <ul id="navbar-top" class="nav navbar-nav navbar-right">
               <li>Sligo +353 (0)71 457 98 44</li>
               <li>|</li>
@@ -44,7 +44,7 @@
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li class="active"><a href="pages/web-dev.html">Web Development<span class="sr-only">(current)</span></a></li>
+              <li><a href="pages/web-dev.html">Web Development</a></li>
               <li><a href="pages/web-des.html">Web Design</a></li>
               <li><a href="pages/gr-des.html">Graphic Design</a></li>
               <li><a href="pages/dig-mar.html">Digital Marketing</a></li>
@@ -62,63 +62,92 @@
     <!-- END OF HEADER --> 
     <!-- SECTION ONE --> 
     <section class="container sec-one">
-      <div class="row">
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <h2>Web Development</h2>
-          <p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <h2>Web Development</h2>
+            <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-dev.html">Learn more</a>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <h2>Web Design</h2>
-          <p>
+            </p>
+            <a href="pages/web-dev.html">Learn more</a>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <h2>Web Design</h2>
+            <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-des.html">Learn more</a>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <h2>Graphic Design</h2>
-          <p>
+            </p>
+            <a href="pages/web-des.html">Learn more</a>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <h2>Graphic Design</h2>
+            <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/gr-des.html">Learn more</a>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <h2>Digital Marketing</h2>
-          <p>
+            </p>
+            <a href="pages/gr-des.html">Learn more</a>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <h2>Digital Marketing</h2>
+            <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/dig-mar.html">Learn more</a>
+            </p>
+            <a href="pages/dig-mar.html">Learn more</a>
+          </div>
         </div>
       </div>
     </section>
     <!-- END OF SECTION ONE --> 
     <!-- SECTION TWO --> 
-    <section class="container sec-two">
-      <div class="row">
-        <div class="col-md-12"></div>
+    <section class="sec-two">
+      <h2 class="text-center">Some Recent Projects...</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sl-cont"></div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- END OF SECTION TWO --> 
     <!-- SECTION THREE --> 
-    <section class="container sec-three">
-      <div class="row">
-        <div class="col-md-12"></div>
+    <section class="sec-three">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-12">
+            <h2>Get a professional website at an affordable price.</h2>
+            <p>
+            Adipisicing quos magnam sint quod officiis Cum perspiciatis magnam soluta inventore corrupti? Inventore ratione qui molestias vel voluptatem Vel inventore.
+            </p>
+          </div>
+          <div class="text-center col-md-4 col-sm-12">
+            <a class="text-center" href="#">Get a Quote</a>
+          </div>
+        </div>
       </div>
     </section>
     <!-- END OF SECTION THREE --> 
     <!-- SECTION FOUR --> 
-    <section class="container sec-four">
-      <div class="row">
-        <div class="col-md-12"></div>
+    <section class="sec-four">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-center">What Our Customers Say..</h2>
+          <div class="col-md-12">
+            <div class="sl-cont"></div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- END OF SECTION FOUR --> 
     <!-- SECTION FIVE --> 
-    <section class="container sec-five">
-      <div class="row">
-        <div class="col-md-12"></div>
+    <section class="sec-five">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-center">Website Design in Irealand..</h2>
+          <div class="col-md-12">
+            <p class="text-center">
+              Lorem nostrum beatae a perferendis laboriosam! Vitae at voluptatibus dolor amet quibusdam ut Cumque consequuntur impedit ea nihil facere Molestias quisquam ipsa cupiditate excepturi fugiat Itaque veritatis error vel repudiandae nihil Unde dolore distinctio laboriosam tempora fuga Explicabo vitae delectus libero temporibus animi? Atque optio quidem ducimus libero ab Deleniti ratione impedit dignissimos neque libero Possimus eos reprehenderit fugit eos aliquam Optio consectetur adipisci at tempore deleniti. Repellat quidem rerum ducimus dignissimos sunt tenetur ullam tenetur. Consequuntur nostrum assumenda ipsum dicta ex deserunt! Nisi libero pariatur possimus consequatur adipisci quisquam Recusandae ut ipsa natus sed esse Accusantium dolorum corporis architecto?
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <!-- END OF SECTION FIVE --> 
