--- a/pages/dig-mar.html
+++ b/pages/dig-mar.html
@@ -26,10 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="reachpeak logo"></a>
+          <a class="hidden-xs navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="reachpeak logo"></a>
+          <a class="visible-xs navbar-brand" href="../index.html"><img src="../images/logo-sm.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <div class="navbar-wrp">
+          <div class="navbar-wrp hidden-xs">
             <ul id="navbar-top" class="nav navbar-nav navbar-right">
               <li>Sligo +353 (0)71 457 98 44</li>
               <li>|</li>
@@ -37,7 +38,7 @@
             </ul>
           </div>
           <div class="navbar-wrp">
-            <ul id="navbar-soc" class="nav navbar-nav navbar-right">
+            <ul id="navbar-soc" class="hidden-xs nav navbar-nav navbar-right">
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -78,7 +79,7 @@
               <li><a href="#"><i class="fas fa-plus"></i>Off The Shelf</a></li>
             </ul>
           </div>
-          <div class="col-md-2 col-sm-6 col-xs-6">
+          <div class="col-md-2 col-sm-12 col-xs-12">
             <ul class="ft-lt">
               <li><a href="#"><i class="fas fa-plus"></i>Hosting Login</a></li>
               <li><a href="#"><i class="fas fa-plus"></i>Support FAQ</a></li>
@@ -88,7 +89,7 @@
               <li><a href="#"><i class="fas fa-plus"></i>Pay Bils</a></li>
             </ul> 
           </div>
-          <div class="col-md-3 col-sm-6 col-xs-6"> 
+          <div class="col-md-2 col-sm-12 col-xs-12">
             <ul class="ft-lt">
               <li><a href="#"><i class="fas fa-map-marker-alt"></i>12D, Six Cross Roads, Waterford</a></li>
               <li><a href="#"><i class="fas fa-phone"></i>081-393252</a></li>
