--- a/pages/web-des.html
+++ b/pages/web-des.html
@@ -63,7 +63,41 @@
     <div class="header-cont"></div>
     <!-- HEADER END --> 
 
-    <!-- TODO: Here goes your content! -->
+    <section class="web-des-sec-one">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+          </div>
+          <div class="col-md-4">
+            <a href="contact.html">Get a Quote</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="web-des-sec-two">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+          </div>
+          <div class="col-md-4">
+            <ul class="side-nav">
+              <li>
+                <img src="../images/web-development-xs.png" alt="">
+              </li>
+              <li>
+                <img src="../images/web-design-xs.png" alt="">
+              </li>
+              <li>
+                <img src="../images/graphic-design-xs.png" alt="">
+              </li>
+              <li>
+                <img src="../images/digital-marketing-xs.png" alt="">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- FOOTER --> 
     <footer>
