--- a/pages/web-des.html
+++ b/pages/web-des.html
@@ -65,8 +65,12 @@
 
     <section class="web-des-sec-one">
       <div class="container">
-        <div class="row">
+        <div class="row row-eq-height">
           <div class="col-md-8">
+            <h2>Get a professional website at an affordable price.</h2>
+            <p>
+              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+            </p>
           </div>
           <div class="col-md-4">
             <a href="contact.html">Get a Quote</a>
@@ -82,16 +86,20 @@
           <div class="col-md-4">
             <ul class="side-nav">
               <li>
-                <img src="../images/web-development-xs.png" alt="">
+                <img src="../images/web-development.png" alt="">
               </li>
               <li>
-                <img src="../images/web-design-xs.png" alt="">
+                <img src="../images/web-design.png" alt="">
               </li>
               <li>
-                <img src="../images/graphic-design-xs.png" alt="">
+                <img src="../images/graphic-design.png" alt="">
               </li>
               <li>
-                <img src="../images/digital-marketing-xs.png" alt="">
+                <img src="../images/digital-marketing.png" alt="">
+              </li>
+              <li>
+                <div>Call us any time<div/>
+                <div>+353 (0)1 514 35 90<div/>
               </li>
             </ul>
           </div>
