sidebar added to web design subpage

--- a/pages/web-des.html
+++ b/pages/web-des.html
@@ -63,43 +63,68 @@
     <div class="header-cont"></div>
     <!-- HEADER END --> 
 
-    <section class="web-des-sec-one">
-      <div class="container">
-        <div class="row row-eq-height">
-          <div class="col-md-8">
-            <h2>Get a professional website at an affordable price.</h2>
-            <p>
+    <section class="container web-des-sec-one">
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="row">
+            <div class="col-sm-12">
+              <h2>Get a professional website at an affordable price.</h2>
+              <p>
               Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
-            </p>
-          </div>
-          <div class="col-md-4">
-            <a href="contact.html">Get a Quote</a>
+              </p>
+            </div>
+            <div class="col-sm-12">
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="web-des-sec-two">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
+        <div class="col-sm-4">
+          <div class="row">
+            <a href="contact.html">Get a Quote</a>
           </div>
-          <div class="col-md-4">
+          <div class="row">
             <ul class="side-nav">
               <li>
-                <img src="../images/web-development.png" alt="">
+                <a href="#">
+                  <img src="../images/web-development.png" alt="">
+                  <div>
+                    <h3>Web development</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
               </li>
               <li>
-                <img src="../images/web-design.png" alt="">
+                <a href="#">
+                  <img src="../images/web-design.png" alt="">
+                  <div>
+                    <h3>Web design</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
               </li>
               <li>
-                <img src="../images/graphic-design.png" alt="">
+                <a href="#">
+                  <img src="../images/graphic-design.png" alt="">
+                  <div>
+                    <h3>Graphic design</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
               </li>
               <li>
-                <img src="../images/digital-marketing.png" alt="">
+                <a href="#">
+                  <img src="../images/digital-marketing.png" alt="">
+                  <div>
+                    <h3>Digital marketing</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
+                </a>
               </li>
               <li>
-                <div>Call us any time<div/>
-                <div>+353 (0)1 514 35 90<div/>
+                <div>
+                  <p>Call us any time</p>
+                  <p>+353 (0)1 514 35 90</p>
+                </div>
               </li>
             </ul>
           </div>
