--- a/pages/port.html
+++ b/pages/port.html
@@ -64,6 +64,130 @@
     <!-- HEADER END --> 
 
     <!-- TODO: Here goes your content! -->
+    <section class="container port-sec-one">
+      <div class="row">
+        <div class="col-sm-8">
+          <h2>Get a professional website at an affordable price.</h2>
+          <p>
+          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <a href="contact.html">Get a Quote</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="container port-sec-two">
+      <div class="row ">
+        <div class="col-md-6">
+          <div>
+            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <p>
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            </p>
+            <a href="#">Read more about this project</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="../images/portfolio-aeu.png" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../images/portfolio-life-med.png" alt="">
+        </div>
+        <div class="col-md-6">
+          <div>
+            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <p>
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            </p>
+            <a href="#">Read more about this project</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div>
+            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <p>
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            </p>
+            <a href="#">Read more about this project</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="../images/portfolio-jadore-la-france.png" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../images/portfolio-oes-krakow.png" alt="">
+        </div>
+        <div class="col-md-6">
+          <div>
+            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <p>
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            </p>
+            <a href="#">Read more about this project</a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="container port-sec-three">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <img src="../images/web-development.png" alt="">
+          <h2>Web Development</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/web-dev.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <img src="../images/web-design.png" alt="">
+          <h2>Web Design</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/web-des.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <img src="../images/graphic-design.png" alt="">
+          <h2>Graphic Design</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/gr-des.html">Learn more</a>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <img src="../images/digital-marketing.png" alt="">
+          <h2>Digital Marketing</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="pages/dig-mar.html">Learn more</a>
+        </div>
+      </div>
+    </section>
+
+
+
+    <section class="container port-sec-four">
+      <div>
+        <p>Call us any time</p>
+        <p>+353 (0)1 514 35 90</p>
+      </div>
+    </section>
+
 
     <!-- FOOTER --> 
     <footer>
