web-des pages structure improved

--- a/pages/web-des.html
+++ b/pages/web-des.html
@@ -63,24 +63,41 @@
     <div class="header-cont"></div>
     <!-- HEADER END --> 
 
-    <section class="container web-des-sec-one">
+    <section class="container web-des-sec-one hidden-xs">
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8 col-md-9">
+          <h2>Get a professional website at an affordable price.</h2>
+          <p>
+          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          </p>
+        </div>
+        <div class="col-sm-4 col-md-3">
+          <a href="contact.html">Get a Quote</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="container web-des-sec-two">
+      <div class="row">
+        <div class="col-sm-8 col-md-9">
+          <div>
+            Lorem earum delectus deserunt dignissimos minus Debitis beatae adipisci temporibus deserunt eveniet In iste ab quis quos quisquam Aliquid consectetur similique corrupti quasi incidunt? Quasi voluptates sit error expedita quos Laboriosam ratione blanditiis quis architecto dignissimos sapiente eos quia dignissimos magnam. Possimus corrupti doloribus aut nostrum illo. Incidunt non vero ut quasi earum! Sapiente aliquam facilis debitis praesentium eius, minima Sit minus ab tenetur omnis expedita. Aliquid sequi temporibus commodi et ipsa laboriosam optio et accusamus. Maxime tempora tempore ut in quaerat Velit cupiditate officiis eaque ipsam quia Voluptatem voluptates aliquid itaque natus odit. Commodi repellat animi cum repellendus optio Molestias fugit expedita quisquam unde fugiat. Magnam aperiam eum illo amet deleniti accusantium. At dicta sequi incidunt fuga ea temporibus Voluptatem dignissimos molestiae nulla beatae ullam dolores, commodi inventore. Accusantium suscipit asperiores autem soluta distinctio. Quam provident at officiis veritatis magni quam Assumenda labore fugiat rerum itaque voluptatem. Consequatur temporibus repellendus maxime consequatur totam atque. Quia totam doloremque quis maiores a magnam. Cumque ipsam optio blanditiis veniam magni. Accusantium enim veniam elit autem libero Dignissimos saepe aut voluptas quos officiis Corrupti dignissimos recusandae ducimus molestias hic nam Quasi natus numquam veritatis quae dolore Magni ut blanditiis dolores vel facere distinctio nostrum, quisquam Commodi ad doloremque deserunt minima hic. Error amet voluptatibus consequatur cumque veritatis corrupti, excepturi. Esse ipsa iusto minus nam rerum commodi? Eligendi laudantium soluta libero quo ut sed? Ratione maiores animi nihil voluptatibus blanditiis itaque, voluptas quaerat! Sed dolore molestias doloremque natus corporis. Sunt odit laudantium quia voluptas ut? Doloribus modi nihil similique consequuntur dignissimos! Provident sint voluptatum eaque nulla eligendi quis optio nobis recusandae Impedit provident libero labore neque consectetur officiis? Ipsum dicta inventore accusamus nihil asperiores! Suscipit velit labore voluptas delectus saepe animi quibusdam facere optio Eos sequi laudantium quidem quod cumque. Perferendis non nostrum sit
+          </div>
+        </div>
+        <section class="container web-des-sec-one visible-xs">
           <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-8 col-md-9">
               <h2>Get a professional website at an affordable price.</h2>
               <p>
               Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
               </p>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-4 col-md-3">
+              <a href="contact.html">Get a Quote</a>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="row">
-            <a href="contact.html">Get a Quote</a>
-          </div>
+        </section>
+        <div class="col-sm-4 col-md-3">
           <div class="row">
             <ul class="side-nav">
               <li>
