portfolio styles finished

--- a/pages/web-des.html
+++ b/pages/web-des.html
@@ -64,14 +64,14 @@
     <!-- HEADER END --> 
 
     <section class="container web-des-sec-one hidden-xs">
-      <div class="row">
-        <div class="col-sm-8 col-md-9">
+      <div class="row cl-ac">
+        <div class="col-sm-8 col-md-9 ">
           <h2>Get a professional website at an affordable price.</h2>
           <p>
           Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
           </p>
         </div>
-        <div class="col-sm-4 col-md-3">
+        <div class="col-sm-4 col-md-3 ">
           <a href="contact.html">Get a Quote</a>
         </div>
       </div>
