--- a/pages/digital-marketing.html
+++ b/pages/digital-marketing.html
@@ -39,7 +39,7 @@
             </ul>
           </div>
           <div class="navbar-wrp">
-            <ul id="navbar-soc" class="hidden-xs nav navbar-nav navbar-right">
+            <ul id="navbar-soc" class=" hidden-xs nav navbar-nav navbar-right">
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -49,10 +49,10 @@
               <li><a href="web-dev.html">Web Development</a></li>
               <li><a href="web-des.html">Web Design</a></li>
               <li><a href="gr-des.html">Graphic Design</a></li>
-              <li><a href="dig-mar.html">Digital Marketing</a></li>
+              <li class="active"><a href="dig-mar.html">Digital Marketing</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About us</a></li>
-              <li class="active"><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
