--- a/pages/about.html
+++ b/pages/about.html
@@ -50,7 +50,7 @@
               <li><a href="web-des.html">Web Design</a></li>
               <li><a href="gr-des.html">Graphic Design</a></li>
               <li><a href="dig-mar.html">Digital Marketing</a></li>
-              <li><a href="port.html">Portfolio</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
