--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -48,9 +48,9 @@
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
               <li><a href="web-dev.html">Web Development</a></li>
               <li><a href="web-des.html">Web Design</a></li>
-              <li><a href="gr-des.html">Graphic Design</a></li>
-              <li class="active"><a href="dig-mar.html">Digital Marketing</a></li>
-              <li><a href="port.html">Portfolio</a></li>
+              <li class="active"><a href="gr-des.html">Graphic Design</a></li>
+              <li><a href="dig-mar.html">Digital Marketing</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
